<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="140dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="30dp">


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_account"
                android:hint="@string/edt_username"
                android:inputType="textEmailAddress"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />


            <EditText
                android:id="@+id/edt_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_lock_password"
                android:hint="@string/edt_password"
                android:inputType="numberPassword"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />


            <!--<Button
                android:id="@+id/bntLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:background="@drawable/click_button_red"
                android:text="@string/bnt_login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />-->

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/bntLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:background="@drawable/button_border_shape"
                android:text="@string/bnt_login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                app:finalCornerAngle="50dp"
                app:initialCornerAngle="0dp"
                app:spinning_bar_color="@color/white_color"
                app:spinning_bar_padding="0dp"
                app:spinning_bar_width="3dp" />

            <Button
                android:id="@+id/link_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:background="@null"
                android:text="@string/link_cadastrar"
                android:textAllCaps="false"
                android:textColor="@color/link_register"
                android:textSize="14sp" />


        </LinearLayout>
    </RelativeLayout>


    <!-- <ImageButton
         android:id="@+id/logo_photo"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="110dp"
         android:background="@drawable/logo_image_background"
         android:elevation="4dp"
         android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/ic_marca"/>
 -->

</RelativeLayout>