<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/medium_padding">


            <EditText
                android:id="@+id/edt_nome_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_account"
                android:hint="@string/edt_name"
                android:inputType="text"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/edt_email_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/edt_username"
                android:inputType="textEmailAddress"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />


            <EditText
                android:id="@+id/edt_senha_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_lock_password"
                android:hint="@string/edt_password"
                android:inputType="numberPassword"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <Spinner
                android:id="@+id/grau_pertenca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:backgroundTint="@color/white_color"

                android:padding="@dimen/small_padding"
                android:spinnerMode="dropdown" />


            <!--<Button-->
            <!--android:id="@+id/btnCadastrarUsuario"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/medium_padding"-->
            <!--android:background="@drawable/click_button_red"-->
            <!--android:text="@string/bnt_cadastrar"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="18sp" />-->

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btnCadastrarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:background="@drawable/button_border_shape"
                android:text="@string/bnt_cadastrar"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                app:finalCornerAngle="50dp"
                app:initialCornerAngle="0dp"
                app:spinning_bar_color="@color/white_color"
                app:spinning_bar_padding="0dp"
                app:spinning_bar_width="3dp" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>